@@ -87,3 +87,6 @@
 2015-12-29 Fred Gleason <fredg@paravelsystems.com>
 	* Added a 'WHCgiObject' class in 'wh/whcgiobject.cpp' and
 	'wh/whcgiobject.h'.
+2015-12-29 Fred Gleason <fredg@paravelsystems.com>
+	* Modified the 'getValue()' methods in 'WHCgiPost' to return default
+	values when the requested CGI variable was not found.
